; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_mmap_inflate.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_mmap_inflate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @mmap_inflate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mmap_inflate(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  br label %6

6:                                                ; preds = %9, %2
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %28

9:                                                ; preds = %6
  %10 = load i64, i64* %4, align 8
  %11 = sub i64 %10, 1
  %12 = load i64, i64* %4, align 8
  %13 = xor i64 %12, -1
  %14 = and i64 %11, %13
  store i64 %14, i64* %5, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* %5, align 8
  %17 = xor i64 %16, -1
  %18 = and i64 %15, %17
  %19 = shl i64 %18, 1
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* %5, align 8
  %22 = and i64 %20, %21
  %23 = or i64 %19, %22
  store i64 %23, i64* %3, align 8
  %24 = load i64, i64* %4, align 8
  %25 = load i64, i64* %4, align 8
  %26 = sub i64 %25, 1
  %27 = and i64 %24, %26
  store i64 %27, i64* %4, align 8
  br label %6

28:                                               ; preds = %6
  %29 = load i64, i64* %3, align 8
  ret i64 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
